--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -56,15 +56,17 @@ body
 .tab-bar
   background: $color-topbar
   color: #fff
-  padding: 0 4px 4px 0
+  padding: 0 0 4px 0
   table
     width: 100%
+    border-bottom: 2px solid #627aad
+    margin-bottom: 4px
   a, a:visited
     color: #fff
     text-decoration: none
   td
     width: ($emulator-width - 8 - 15) / 4
-    padding: 6px 0
+    padding: 4px 4px 2px 0px
     text-align: center
     font-weight: bold
     font-size: 12px
@@ -76,7 +78,6 @@ body
 
 .ad-bar
   padding: 0 0
-  border-top: 2px solid $secondary-color
   border-bottom: 2px solid $secondary-color
   background: $color-topbar
   text-align: center
