--- a/app/views/layouts/mobile_basic.slim
+++ b/app/views/layouts/mobile_basic.slim
@@ -1,6 +1,8 @@
 ! doctype 5
-html
+html lang="en-US"
   head
+    meta http-equiv="Content-Type" content="text/html; charset=utf-8"
+    
     title YoMobi
     = render 'shared/iphone-meta.html'
     = stylesheet_link_tag 'mobile-basic'
