--- a/app/views/layouts/mobile.slim
+++ b/app/views/layouts/mobile.slim
@@ -1,6 +1,8 @@
 ! doctype 5
-html
+html lang="en-US"
   head
+    meta http-equiv="Content-Type" content="text/html; charset=utf-8"
+    
     title = "#{@company.name} - Mobile Website - Yomobi"
     = render 'shared/iphone-meta.html'
     = stylesheet_link_tag 'mobile'
