Tell a friend widget mobile view copy change

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -248,7 +248,7 @@
         br
         input(type="submit" value="Send")
     .thanks-wrap style="display:none"
-      h3 Thank you for your message. We will contact you soon.
+      h3 Thank you for sharing our mobile site.
   
   script.booking-page(type="text/template")
     .input-wrap
