Changed keep me informed editor copy

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -416,7 +416,7 @@
     input(name="email" type="text" value="{{ _maybe.email }}")
   
   script.tell-a-friend-edit-area(type="text/template")
-    p This widget will appear on your mobile website and allow your customers to instantly tell their friends about your mobile website.
+    p This widget will appear on your mobile website and allow your customers to tell their friends about your mobile website.
   
   script.booking-request-edit-area(type="text/template")
     label Enter the email you would like to receive your customers' booking requests on*:
@@ -424,8 +424,8 @@
     input(name="email" type="text" value="{{ _maybe.email }}")
   
   script.keep-me-informed-edit-area(type="text/template")
-    p This widget allows your customers to opt-in to receive email and sms notifications from you.
-    p You can send out notifications to your customers by click on the “Manage Customers” link on the left hand side of your browser.
+    p This widget will appear on your mobile site and allow your visitors to request to receive email and text notifications from you.
+    p You can send notifications to your followers by clicking on the “Email your Followers” or "Send Text to Your Followers" link on the left hand side of your browser.
     br
     label Provide your email address to receive opt-ins*:
     input name="email" type="text" value="{{ _maybe.email }}"
