--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -77,6 +77,7 @@ body
     cursor: pointer
 
 .ad-bar
+  display: none
   padding: 0 0
   border-bottom: 2px solid $secondary-color
   background: $color-topbar
