--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -72,6 +72,7 @@ body {
     cursor: pointer; }
 
 .ad-bar {
+  display: none;
   padding: 0 0;
   border-bottom: 2px solid #627aad;
   background: #3b5998;
