Revert "Merge branch 'master' of github.com:mindeavor/yomobi"
This reverts commit 143d04207e337baee7c121d9d8be692b31ffa5e6, reversing
changes made to 4c2d19c8f4c312b30743d773c51c46b6fc1a8fb0.

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -1,9 +1,6 @@
 ! doctype 5
-html lang="en-US"
+html
   head
-    meta http-equiv="Content-Type" content="text/html; charset=utf-8"
-    meta name="description" content="Welcome to YoMobi, the easiest mobile website building platform in the world. Create an interactive, social media enabled, mobile site that reaches your customers, friends and fans in minutes."
-
     title YoMobi
     = stylesheet_link_tag 'signup-app'
     = stylesheet_link_tag 'flick/jquery-ui-1.8.11.custom'
