--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -133,12 +133,11 @@ p.success
   border: 1px dashed #000
 
 #simpleTooltip
-  padding: 4px 0px 4px 4px
-  margin: 0
+  padding: 7px
   border: 1px solid #DD3C10
-  background: #f8e6e0
-  max-width: 175px
-  font-size: 11px
+  background: #FFEBE8
+  max-width: 270px
+  font-size: 14px
 
 #footer
   border-top: 1px solid $light-border
@@ -157,9 +156,6 @@ p.success
 .hr
   border-top: 1px solid $light-border
   padding-top: 14px
-
-.blue
-  color: #1030D0
 
 .lfloat
   float: left
