--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -4,5 +4,5 @@
   img src="/images/ui/home-phone.png"
 
 #signup-box
-  h2 Sign Up (It's free)
+  h2 Sign Up (it's free)
   = render :partial => 'signup_form', :locals => {:hide_captcha => true}
