--- a/app/views/shared/_header-signin-form.slim
+++ b/app/views/shared/_header-signin-form.slim
@@ -15,5 +15,5 @@
     = check_box_tag 'user[remember_me]'
     = label_tag :keep_me_logged_in, nil, :class => 'subtext'
   
-  .group.lfloat style="padding-top:3px"
+  .group.lfloat
     = link_to "Forgot your password?", new_password_path(:user), :class => 'subtext'
