--- a/app/views/mobile/_social-share.html.erb
+++ b/app/views/mobile/_social-share.html.erb
@@ -17,3 +17,9 @@ title = u "#{@company.name}'s Mobile Website - Yomobi"
 
   <li><a rel="nofollow"  target="_blank" href="mailto:?subject=<%=title %>&amp;body=http%3A%2F%2F<%= curl %>" title="email"><img src="/images/share/email.png" title="email" alt="email" /></a></li>
 </ul>
+
+<div class="clearfix"></div>
+
+<div style="border-top:1px solid #b3b3b3;margin:8px 0"></div>
+
+<div class="powered-by">Powered by <a href="http://www.yomobi.com" target="_blank">YoMobi</a></div>
