--- a/app/views/shared/_category-templates.slim
+++ b/app/views/shared/_category-templates.slim
@@ -13,13 +13,14 @@ script.menu-item-dialog(type="text/template")
     br
     textarea.item-input name="desc" {{ _maybe.desc }}
     br
-    input type="button" value="{{ addButtonText }}" name="add"
+    input.lfloat type="button" value="{{ addButtonText }}" name="add" style="margin:10px 15px 0 2px"
 
     | <% if(flash.error) { %>
     p.error Error: {{ flash.error }}
     | <% } if(flash.success) { %>
     p.success {{ flash.success }}
     | <% } if (addedItems.length > 0) { %>
+    .clearfix.divider style="margin-top: 15px"
     .other-names
       b Added Items:
       ul
@@ -43,13 +44,14 @@ script.services-item-dialog(type="text/template")
     br
     textarea.item-input name="desc" {{ _maybe.desc }}
     br
-    input type="button" value="{{ addButtonText }}" name="add"
+    input.lfloat type="button" value="{{ addButtonText }}" name="add" style="margin:10px 15px 0 2px"
     
     | <% if(flash.error) { %>
     p.error Error: {{ flash.error }}
     | <% } if(flash.success) { %>
     p.success {{ flash.success }}
     | <% } if (addedItems.length > 0) { %>
+    .clearfix.divider style="margin-top: 15px"
     .other-names
       b Added Items:
       ul
@@ -73,13 +75,14 @@ script.products-item-dialog(type="text/template")
     br
     textarea.item-input name="desc" {{ _maybe.desc }}
     br
-    input type="button" value="{{ addButtonText }}" name="add"
+    input.lfloat type="button" value="{{ addButtonText }}" name="add" style="margin:10px 15px 0 2px"
     
     | <% if(flash.error) { %>
     p.error Error: {{ flash.error }}
     | <% } if(flash.success) { %>
     p.success {{ flash.success }}
     | <% } if (addedItems.length > 0) { %>
+    .clearfix.divider style="margin-top: 15px"
     .other-names
       b Added Items:
       ul
@@ -115,13 +118,14 @@ script.property-listings-item-dialog(type="text/template")
     br
     textarea.item-input name="desc" {{ _maybe.desc }}
     br
-    input type="button" value="{{ addButtonText }}" name="add"
+    input.lfloat type="button" value="{{ addButtonText }}" name="add" style="margin:10px 15px 0 2px"
     
     | <% if(flash.error) { %>
     p.error Error: {{ flash.error }}
     | <% } if(flash.success) { %>
     p.success {{ flash.success }}
     | <% } if (addedItems.length > 0) { %>
+    .clearfix.divider style="margin-top: 15px"
     .other-names
       b Added Items:
       ul
@@ -149,13 +153,14 @@ script.locations-item-dialog(type="text/template")
     br
     textarea.item-input name="info" {{ _maybe.info }}
     br
-    input type="button" value="{{ addButtonText }}" name="add"
+    input.lfloat type="button" value="{{ addButtonText }}" name="add" style="margin:10px 15px 0 2px"
     
     | <% if(flash.error) { %>
     p.error Error: {{ flash.error }}
     | <% } if(flash.success) { %>
     p.success {{ flash.success }}
     | <% } if (addedItems.length > 0) { %>
+    .clearfix.divider style="margin-top: 15px"
     .other-names
       b Added Items:
       ul
@@ -201,4 +206,6 @@ script.locations-item
     div
       | Phone:
       a href="tel:{{ item.phone }}" {{ item.phone }}
-    div Address: {{ item.address }}
+    div
+      ' Address:
+      a href="http://maps.google.com/maps?q={{ item.address }}" target="_blank" {{ item.address }}
