--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -130,11 +130,12 @@ p.success {
   border: 1px dashed black; }
 
 #simpleTooltip {
-  padding: 7px;
+  padding: 4px 0px 4px 4px;
+  margin: 0;
   border: 1px solid #dd3c10;
-  background: #ffebe8;
-  max-width: 270px;
-  font-size: 14px; }
+  background: #f8e6e0;
+  max-width: 175px;
+  font-size: 11px; }
 
 #footer {
   border-top: 1px solid #b3b3b3;
@@ -153,6 +154,9 @@ p.success {
 .hr {
   border-top: 1px solid #b3b3b3;
   padding-top: 14px; }
+
+.blue {
+  color: #1030d0; }
 
 .lfloat {
   float: left; }
