--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -9,6 +9,7 @@
     list-style: none
     padding-left: 0
     margin: 54px 0 10px 0
+    font-size: 12px
   .spacer
     border-top: 1px solid #ddd
     margin: 5px 0
@@ -20,7 +21,7 @@
       float: left
       width: 16px
       height: 16px
-      margin-right: 4px
+      margin: -1px 4px 0 0
       background: url(/images/test-icons.png)
     &:hover
       background-color: $highlight-color
@@ -42,14 +43,15 @@
     cursor: pointer
     .title
       width: auto
-      padding: 2px 0 0 4px
+      padding: 2.5px 0 0 4px
       text-align: left
       height: auto
+      font-size: 12px
     .icon
       margin: 0
       float: left
-      width: 16px
-      height: 16px
+      width: 18px
+      height: 18px
   .home-icon:hover
     background: #ffff00
   .home-icon.singletonInUse
@@ -90,8 +92,8 @@
     width: 32px
     height: 32px
     top: -94px
-    left: 37px
-    background: url(/images/ui/invalid-for-showing.png)
+    left: 40px
+    background: url(/images/ui/invalid-for-showing.png) no-repeat
 
 #builder-container
   background: $light-bg-color
@@ -105,7 +107,7 @@
       font-weight: bold
       color: #000066
     & > .title-subtext
-      height: 44px
+      height: 30px
       padding: 0 10px 0 0
   .left
     width: $content-width - $widget-editor-width
@@ -180,7 +182,7 @@
     margin: 4px 6px 0 0
   .widget-name
     padding: 0 0 0 64px
-    font-size: 2em
+    font-size: 1.75em
     word-wrap: break-word
     .change-label
       display: none
@@ -199,6 +201,9 @@
     input[type=text]
       font-size: 1.5em
       width: 250px
+
+#builder .panel
+  padding: 0 0 10px 10px
 
 #emulator-wrapper
   float: left
@@ -263,6 +268,10 @@
   overflow-x: hidden
   height: 480px
   width: 335px
+
+.divider
+  border-top: 1px solid $light-border
+  margin: 10px 0
 
 /////////////////////////////
 // Widget-specific styling //
