--- a/public/stylesheets/sass/signup.sass
+++ b/public/stylesheets/sass/signup.sass
@@ -83,6 +83,9 @@
   h2
     border-bottom: 1px solid #ccc
     padding-bottom: 4px
+    margin: 5px 0 5px 0
+  h3
+    margin: 5px 0 5px 0
   .login-error
     margin: 25px 0 15px
     padding: 10px
@@ -158,7 +161,8 @@
   input[type=text]
     margin-bottom: 10px
   textarea
-    height: 10em
+    height: 7em
+    line-height: 110%
   .site-url
     span
       font-size: 1.5em
