--- a/app/views/builder/_social-share.html.erb
+++ b/app/views/builder/_social-share.html.erb
@@ -1,19 +1,24 @@
+<script type="text/javascript">
+stLight.options({publisher:'ac9391da-2465-423f-a4e3-2c9736d44738'});
+</script>
+<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+
 <% 
 curl = "http://www.yomobi.com"
 title = u "Yomobi - The Ultimate Mobile Website Builder"
 %>
 
 <ul class="social-share">
-  <li style="padding-top: 5px">Share:</li>
-  <li><a rel="nofollow"  target="_blank" href="http://www.facebook.com/share.php?u=<%= curl %>&amp;t=<%= title %>" title="Facebook"><img src="/images/share/facebook.png" title="Facebook" alt="Facebook" /></a></li>
+  <li style="padding-top: 7px">Share:</li>
+  <li><a rel="nofollow"  target="_blank" href="http://www.facebook.com/share.php?u=<current_url>&amp;t=<current_page_title>" title="Facebook"><img src="/images/share/facebook.png" title="Facebook" alt="Facebook" /></a></li>
 
-  <li><a rel="nofollow"  target="_blank" href="http://twitter.com/home?status=<%= title %>%20-%20<%= curl %>" title="Twitter"><img src="/images/share/twitter.png" title="Twitter" alt="Twitter" /></a></li>
+  <li><a rel="nofollow"  target="_blank" href="http://twitter.com/home?status=<current_page_title>-<current_url>" title="Twitter"><img src="/images/share/twitter.png" title="Twitter" alt="Twitter" /></a></li>
 
-  <li><a rel="nofollow"  target="_blank" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=<%= curl %>&amp;title=<%= title %>&amp;source=YoMobi&amp;summary=This%20site%20is%20interesting." title="LinkedIn"><img src="/images/share/linkedin.png" title="LinkedIn" alt="LinkedIn" /></a></li>
+  <li><a rel="nofollow"  target="_blank" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=<current_url>&amp;title=<current_page_title>&amp;source=YoMobi&amp;summary=This%20site%20is%20interesting." title="LinkedIn"><img src="/images/share/linkedin.png" title="LinkedIn" alt="LinkedIn" /></a></li>
 
-  <li><a rel="nofollow"  target="_blank" href="http://www.stumbleupon.com/submit?url=<%= curl %>&amp;title=<%= title %>" title="StumbleUpon"><img src="/images/share/stumbleupon.png" title="StumbleUpon" alt="StumbleUpon" /></a></li>
+  <li><a rel="nofollow"  target="_blank" href="http://www.stumbleupon.com/submit?url=<current_page_url>&amp;title=<current_page_title>" title="StumbleUpon"><img src="/images/share/stumbleupon.png" title="StumbleUpon" alt="StumbleUpon" /></a></li>
 
-  <li><a rel="nofollow"  target="_blank" href="http://www.google.com/bookmarks/mark?op=edit&amp;bkmk=<%= curl %>&amp;title=<%= title %>&amp;annotation=This%20site%20os%20interesting." title="Google"><img src="/images/share/google.png" title="Google Bookmarks" alt="Google Bookmarks" /></a></li>
+  <li><a rel="nofollow"  target="_blank" href="http://www.google.com/bookmarks/mark?op=edit&amp;bkmk=<current_url>&amp;title=<current_page_title>&amp;annotation=This%20site%20os%20interesting." title="Google"><img src="/images/share/google.png" title="Google Bookmarks" alt="Google Bookmarks" /></a></li>
 
-  <li><a rel="nofollow"  target="_blank" href="mailto:?subject=<%=title %>&amp;body=http%3A%2F%2F<%= curl %>" title="email"><img src="/images/share/email.png" title="email" alt="email" /></a></li>
+  <li><a rel="nofollow"  target="_blank" href="mailto:?subject=<current_page_title>&amp;body=http%3A%2F%2F<current_url>" title="email"><img src="/images/share/email.png" title="email" alt="email" /></a></li>
 </ul>
