Added meta keywords, updated meta description

--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -2,7 +2,8 @@
 html lang="en-US"
   head
     meta http-equiv="Content-Type" content="text/html; charset=utf-8"
-    meta name="description" content="Welcome to YoMobi, the easiest mobile website building platform in the world. Create an interactive, social media enabled, mobile site that reaches your customers, friends and fans in minutes."
+    = render 'shared/meta-description'
+    = render 'shared/meta-keywords'
 
     title YoMobi
     = stylesheet_link_tag 'builder-app'
