Meta title update

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -5,7 +5,7 @@ html lang="en-US"
     = render 'shared/meta-description'
     = render 'shared/meta-keywords'
 
-    title YoMobi
+    title YoMobi | Create free mobile website builder and design | Best mobile sites for business and individual
     = stylesheet_link_tag 'signup-app'
     = stylesheet_link_tag 'flick/jquery-ui-1.8.11.custom'
     = csrf_meta_tag
