--- a/app/views/layouts/mobile.slim
+++ b/app/views/layouts/mobile.slim
@@ -3,7 +3,7 @@ html lang="en-US"
   head
     meta http-equiv="Content-Type" content="text/html; charset=utf-8"
     
-    title = "#{@company.name} - Mobile Website - Yomobi"
+    title = "#{@company.name} | Mobile Website | Yomobi"
     = render 'shared/iphone-meta.html'
     = stylesheet_link_tag 'mobile'
     meta name="keywords" content=@company.keywords
