--- a/app/views/layouts/mobile_basic.slim
+++ b/app/views/layouts/mobile_basic.slim
@@ -3,7 +3,7 @@ html lang="en-US"
   head
     meta http-equiv="Content-Type" content="text/html; charset=utf-8"
     
-    title YoMobi
+    title YoMobi | Create free mobile website builder and design | Best mobile sites for business and individual
     = render 'shared/iphone-meta.html'
     = stylesheet_link_tag 'mobile-basic'
   body
